updated sprint home

--- a/app/views/sprint1.html
+++ b/app/views/sprint1.html
@@ -12,7 +12,8 @@
 
       <h2 class="heading-large">Alpha sprint 1</h2>
   
-      <p>Created mid May 2016</p>
+      <p>Created mid May 2016
+      <br>Pensioner MVP</p>
   
       <ul>
         <li><a href="/lis/1/index">Start page</a></li>
@@ -27,9 +28,7 @@
   
       <ul class="list list-bullet">
         <li>Full end to end journey for <a href="/lis/personas/bill-persona">Bill persona</a></li>
-        <li>Bill has a state pension, private pension, rents his home and pays council tax. </li>
-        <li>No others in household, no benefits.</li>
-        <li>Bill has full entitlement.</li>
+        <li>Bill has full entitlement (HC1)</li>
       </ul>
   
       <br>
@@ -43,8 +42,8 @@
         <li>2) didn’t feel like they had finished at the end,</li>
         <li>3) language, 
         <li>4) benefit questions.</li> 
-        <li>Users want clearer info around what part of their rent they need to tell us about, if they get help towards it.</li>
-        <li>They need clearer feedback that the application has been submitted and what the next steps are. </li>
+        <li>Users want to know what part of their rent they need to tell us about, if they get help towards it.</li>
+        <li>They need clear feedback that the application has been submitted and what the next steps are. </li>
         <li>Users who are low on the digital inclusion scale could use this, but require the correct language to understand it.</li>
       </ul>
   
