--- a/app/views/sprint2.html
+++ b/app/views/sprint2.html
@@ -13,7 +13,8 @@
 
       <h2 class="heading-large">Alpha sprint 2</h2>
      
-      <p>Created end May 2016</p>
+      <p>Created end May 2016
+      <br>Pensioner MVP</p>
             
       <ul>
         <li><a href="/lis/2/index">Start page</a></li>
@@ -27,11 +28,7 @@
       
       <ul class="list list-bullet">
         <li>Full end to end journey for <a href="/lis/personas/miriam-persona">Miriam persona</a></li>
-        <li>Miriam has a private pension</li>
-        <li>Lives in her own home and pays council tax. </li>
-        <li>Has a non-dependant son living in the household</li>
-        <li>No benefits.</li>
-        <li>Miriam has some entitlement</li>
+        <li>Miriam has part entitlement (HC3)</li>
       </ul>
   
       <br>
@@ -39,12 +36,13 @@
       <h3><span class="strong">What we changed: </span> </h3>
      
       <ul class="list list-bullet">
+        <li>Users can choose between <a href="lis/2/you/pension/pension-type">state and private pension</a>.</li>
+        <li>Added a '£' to each field that requires a value in pounds.</li>
         <li>Updated the <a href="lis/2/full-help">end screen</a> because users didn't feel they were 'done'.</li>
-        <li>Added visual feedback on the <a href="lis/2/lis-home4">hub screen</a> to show a section was complete.</li>
-        <li>Added <a href="lis/2/assets/accounts">savings accounts</a> and amended the text so that the <a href="lis/2/assets/money">savings options</a> were hopefully clearer.</li>
-        <li>Added ability to <a href="lis/2/live/others/people">tell us that someone else lives in your home</a> and their circumstances.</li>
-        <li>Enabled the prototype to allow the user to select <a href="lis/2/live/home">in a home I own</a> and tailored the questions based on this choice.</li>
-        <li>Enabled the prototype to handle a users' choice of <a href="lis/2/you/pension/pension-type">pensions</a> and only ask the relevant question based on their choice.</li>
+        <li>Added a tick on the <a href="lis/2/lis-home4">hub screen</a> when a section is complete.</li>
+        <li>Added <a href="lis/2/assets/accounts">savings accounts</a> and amended the text so that the options are hopefully clearer.</li>
+        <li>Users can now <a href="lis/2/live/others/people">tell us that someone who lives in your home</a> and their circumstances.</li>
+        <li>Users can now select <a href="lis/2/live/home">in a home I own</a> and added the questions based on this choice.</li>
         <li>Added a <a href="lis/2/part-help">partial help screen</a></li>
         <li>Added text to the <a href="lis/2/live/rent">rent amount screen</a> to explain the amount a user should enter.</li>
       </ul>
