--- a/app/views/sprint3.html
+++ b/app/views/sprint3.html
@@ -12,8 +12,9 @@
 
       <h2 class="heading-large">Alpha sprint 3</h2>
   
-      <p>Created 9 June 2016</p>
-  
+      <p>Created 9 June 2016<br>
+      Pensioner MVP</p>
+
       <ul>
         <li><a href="/lis/3/index">Start page</a></li>
         <li><a href="/lis/3/lis-home">My lis home page</a></li>
@@ -26,10 +27,7 @@
       
       <ul class="list list-bullet">
         <li>Full end to end journey for <a href="/lis/personas/mattus-persona">Mr &amp; Mrs Mattu persona</a></li>
-        <li>Have a state pension and a private pension.</li>
-        <li>They receive benefits.</li>
-        <li>They live in their own home and have no mortgage. They pay council tax.</li>
-        <li>Mr &amp; Mrs Mattu would have part entitlement.</li>
+        <li>Mr &amp; Mrs Mattu would have part entitlement (HC3).</li>
       </ul>
   
       <br>
@@ -37,11 +35,12 @@
       <h3><span class="strong">What we changed: </span> </h3>
       
       <ul class="list list-bullet">
-        <li>Partner questions have been added.</li>
-        <li>Benefit types have been reduced to reflect those available to Mr &amp; Mrs Mattu, considering their ages and situation.</li>
-        <li>Added functionality to allow users to tell us they have Premium Bonds, and the value of them.</li>
-        <li>Specific questions about benefits have been added including combinations.</li>
-        <li>A first pass at save and restore account functionality has been created.</li>
+        <li>Added partner questions</li>
+        <li>Added content to tell users what they need to apply.</li>
+        <li>Updated the prefered contact method.</li>
+        <li>Benefits are only relevant to Mr &amp; Mrs Mattu, based on their ages and situation.</li>
+        <li>User can now tell us they have Premium Bonds, and the value.</li>
+        <li>Save and restore functionality added.</li>
       </ul>
   
       <br>
