--- a/app/views/sprint4.html
+++ b/app/views/sprint4.html
@@ -11,7 +11,9 @@
       <!--p>Have some feedback let us know! If you have a comment or suggestion for this prototype please email: <>mark.dobson@nhs.net</p-->
 
       <h2 class="heading-large">Alpha sprint 4</h2>
-      <p>Created 28 June 2016</p>
+      <p>Created 28 June 2016<br>
+      Pensioner MVP</p>
+  
       <ul>
         <li><a href="/lis/4/index">Start page</a></li>
         <li><a href="/lis/4/lis-home">My lis home page</a></li>
@@ -46,7 +48,13 @@
       <h3><span class="strong">What we changed:</span> </h3>
       
       <ul class="list list-bullet">
-        <li>Questions have been improved about others in the home.</li>
+        <li>Improved journey for others in the home.</li>
+        <li>Improved the exemption screens.</li>
+        <li>Improved the what you need to apply screen.</li>
+        <li>Improved save and continue / sign in screens.</li>
+        <li>Improved feedback on the hub screen where a section is started / not started / complete.</li>
+        <li>Added 2 step verification.</li>
+        <li>User can now tell us about other properties.</li>
       </ul>
 
       <br>
@@ -56,8 +64,8 @@
       <ul class="list list-bullet">
         <li>Users we tested with (low digital skills) found the sign in confusing. They seemed to be more inclined to use a memorable word.</li>
         <li>They were overwhelmed by the <a href="/lis/4/save-continue/ref">sign in pages</a>, there is too much being asked for at once.</li>
-        <li>The page that tells users <a href="/lis/4/need-to-know">what they will need to apply</a> is not direct enough. One of our users was confused by the title Low Income Scheme, <span class="quote">'I'm not on the low income scheme'</span> - she thought it was a type of benefit. Many of the users don't know what the low income scheme is.</li>
-        <li>Several users tried to select the whole row on the <a href="/lis/4/lis-home">LIS home screen</a>.</li>
+        <li>The page that tells users <a href="/lis/4/need-to-know">what they will need to apply</a> is not direct enough. One of our users was confused by the title Low Income Scheme, <span class="quote">'I'm not on the l low income scheme'</span> - she thought it was a type of benefit. Many of the users don't know what the low income scheme is.</li>
+        <li>Users tried to select the whole row on the <a href="/lis/4/lis-home">LIS home screen</a>.</li>
       </ul>
   
 </main>
