--- a/app/views/sprint5.html
+++ b/app/views/sprint5.html
@@ -10,7 +10,8 @@
 
   <h2 class="heading-large">Alpha sprint 5</h2>
   
-  <p>Created 28 June 2016</p>
+  <p>Created 28 June 2016<br>
+  Pensioner MVP</p>
   
   <ul>
     <li><a href="/lis/5/index">Start page</a></li>
@@ -46,8 +47,15 @@
   <h3><span class="strong">What we changed: </span> </h3>
 
   <ul class="list list-bullet">
-    <li>Added new exemption page where users could manage their exemption (print, download, amend, etc)</li>
+    <li>Added journey for users in a care home</li>
+    <li>Better exemption page where users print, download, amend, etc</li>
     <li>Edited the journey for people living at home who are in education.</li>
+    <li>Improved what you will need to apply page.</li>
+    <li>Improved save and continue / memorable word / application number pages.</li>
+    <li>Pension credit added as a kickout.</li>
+    <li>When users tell us they have a partner, the text of some questions now updates to reflect this.</li>
+    <li>Improved questions about service charges.</li>
+    <li>Split the exemption page up so that the user now gets a done screen before seing their exemption.</li>
   </ul>
 
   <br>
