--- a/app/views/sprint6.html
+++ b/app/views/sprint6.html
@@ -9,7 +9,9 @@
   <h1 class="heading-xlarge">Low Income Scheme prototype</h1>
 
   <h2 class="heading-large">Alpha sprint 6</h2>
-  <p>Created 28 June 2016</p>
+  <p>Created 28 June 2016<br>
+  Pensioner MVP</p>
+  
   <ul>
     <li><a href="/lis/6/index">Start page</a></li>
     <li><a href="/lis/6/lis-home">My lis home page</a></li>
@@ -53,7 +55,12 @@
 
   <ul class="list list-bullet">
     <li>Refined the entitlement pages.</li>
+    <li>Improved what you will need to apply page.</li>
+    <li>Improved save and continue / memorable word / application number pages.</li>
+    <li>Improved contact preference questions.</li>
     <li>Refined the journey for application number &amp; memorable word.</li>
+    <li>Added journey for users to get a copy by email or in the post.</li>
+    <li>Shows a list of the people you have told us about.</li>
   </ul>
 
   <br>
