--- a/app/views/sprint7.html
+++ b/app/views/sprint7.html
@@ -9,7 +9,9 @@
   <h1 class="heading-xlarge">Low Income Scheme prototype</h1>
 
   <h2 class="heading-large">Alpha sprint 7</h2>
-  <p>Created 8 August 2016</p>
+  <p>Created 8 August 2016<br>
+  Pensioner MVP</p>
+  
   <ul>
     <li><a href="/lis/7/index">Start page</a></li>
     <li><a href="/lis/7/lis-home">My lis home page</a></li>
@@ -57,6 +59,7 @@
   <ul class="list list-bullet">
     <li>Refined the entitlement pages.</li>
     <li>Refined the journey for application number &amp; memorable word.</li>
+    <li>Declaration added to the hub page.</li>
   </ul>
 
   <br>
@@ -64,7 +67,7 @@
   <h3><span class="strong">What we found: </span> </h3>
   
   <ul class="list list-bullet">
-      <li>Testing August 2016</a></li>
+      <li>Testing August 2016</li>
   </ul>
 
   
