--- a/app/views/lis/7/live/tax-amount.html
+++ b/app/views/lis/7/live/tax-amount.html
@@ -21,28 +21,22 @@
   <form action="" method="get" class="form">
 
     <div class="form-item-wrapper">
-      <!--div class="form-group">
+      <div class="form-group">
         <input type="radio" id="week" name="minor">
         <label class="form-control-radio js-toggle" for="week" data-hide="#tax-months">
           Every week
         </label>
-      </div-->
-      <!--div class="form-group">
+      </div>
+      <div class="form-group">
         <input type="radio" id="fortnight" name="minor">
         <label class="form-control-radio js-toggle" for="fortnight" data-hide="#tax-months">
           Every two weeks
         </label>
-      </div-->
-      <!--div class="form-group">
+      </div>
+      <div class="form-group">
         <input type="radio" id="fourweekly" name="minor">
         <label class="form-control-radio js-toggle" for="fourweekly" data-hide="#tax-months">
          Every four weeks
-        </label>
-      </div-->
-      <div class="form-group">
-        <input type="radio" id="year" name="minor">
-        <label class="form-control-radio js-toggle" for="year" data-hide="#tax-months">
-          Annually
         </label>
       </div>
       <div class="form-group">
@@ -51,14 +45,12 @@
          Every month
         </label>
       </div>
-          <div class="js-hidden panel-indent" id="tax-months">
-          {{
-            form_macros.text_field({
-              id: 'tax-months',
-              label: 'How many months do you pay over?'
-            })
-          }}
-        </div><br>
+      <div class="form-group">
+        <input type="radio" id="year" name="minor">
+        <label class="form-control-radio js-toggle" for="year" data-hide="#tax-months">
+          Annually
+        </label>
+      </div>
       
     {{
       form_macros.amount_field({
@@ -66,6 +58,14 @@
         label: 'How much do you pay?'
       })
     }}
+          <div class="js-hidden" id="tax-months">
+          {{
+            form_macros.text_field({
+              id: 'tax-months',
+              label: 'How many months do you pay over?'
+            })
+          }}
+        </div>
 
     </div>  
         
