--- a/app/assets/sass/accordian.scss
+++ b/app/assets/sass/accordian.scss
@@ -385,3 +385,9 @@ main {
     margin: -8px 0 0 0;
 }
 
+.email-text{
+    padding-left:2em;
+    background-image: url(/public/images/icon_email.png);
+    background-repeat: no-repeat;
+    background-position: 0px;
+}
