--- a/app/views/lis/7/end/tabs/hc3-documents.html
+++ b/app/views/lis/7/end/tabs/hc3-documents.html
@@ -37,37 +37,20 @@
   <div class="attachment-thumb">
       <img alt="" src="/public/images/hc3-img-01.png">
   </div>
-  <div class="attachment-details">
-<!--    <h2 class="heading-medium">Your help with health costs </h2>-->
-    <p class="links">
-        <span class="preview">
-          <strong>
-            <a href="/government/uploads/system/uploads/attachment_data/file/396239/140930---Organogram-Data---HM-Passport-Office-senior-data_csv.csv/preview">View online</a>
-          </strong>
-        </span>
-      </p>
-             <p class="links">
-        <span class="download">
-          <a href="/government/uploads/system/uploads/attachment_data/file/396239/140930---Organogram-Data---HM-Passport-Office-senior-data_csv.csv">
-            <strong>Print</strong>
-</a>        </span>
-    </p>
-       <p class="links">
-        <span class="download">
-          <a href="/government/uploads/system/uploads/attachment_data/file/396239/140930---Organogram-Data---HM-Passport-Office-senior-data_csv.csv">
+          <div class="attachment-details">
+            <p class="links"><span class="download"><a href="../../exemption/email-me?helplevel=3">
+            <strong>Email (another) copy</strong></a></span></p>
+
+            <p class="links"><span class="download">
+            <a href="javascript:window.print();"> <strong>Print</strong></a></span></p>
+
+            <p class="links"> <span class="download"><a href="/public/images/hc3.pdf">
             <strong>Download PDF</strong>
-            9.97KB
-</a>        </span>
-    </p>
-<!--
-                 <p class="links">
-        <span class="download">
-          <a href="/government/uploads/system/uploads/attachment_data/file/396239/140930---Organogram-Data---HM-Passport-Office-senior-data_csv.csv">
-            <strong>Print</strong>
-</a>        </span>
-    </p>
--->
-  </div>
+            9.97KB</a></span></p>
+
+            <p class="links"> <span class="download"><a href="/public/images/hc3.pdf">
+            <strong>Request a paper copy</strong></a></span></p>
+          </div>
 </section>
 
 
