--- a/app/views/sprint7.html
+++ b/app/views/sprint7.html
@@ -4,6 +4,11 @@
 
 {% block content %}
 
+<style>
+    .persona-link{
+        line-height: 2em;
+    }</style>
+
 <main id="content" role="main">
   <a class="back-link" href="index">Back </a>
   <h1 class="heading-xlarge">Low Income Scheme prototype</h1>
@@ -58,8 +63,14 @@
   <h3><span class="strong">What we've changed: </span> </h3>
 
   <ul class="list list-bullet">
-    <li>Refined the entitlement pages.</li>
-    <li>Refined the journey for application number &amp; memorable word.</li>
+        <li>Refined the entitlement pages.</li>
+        <li>Refined the journey for application number &amp; memorable word.</li>
+        <li>Refined personas to include digital and financial behaviours including Digital Inclusion scale markings and future oppertunity spaces to explore.</li>
+    <div class="panel-indent">
+        <a class="persona-link" href="/public/images/persona-images/bill.pdf">Bill</a><br>
+        <a class="persona-link" href="/public/images/persona-images/Mr_mrs_mattu.pdf">Mr and Mrs Mattu</a><br>
+        <a class="persona-link" href="/public/images/persona-images/miriam.pdf">Miriam</a>
+    </div>
   </ul>
 
   <br>
@@ -67,7 +78,7 @@
   <h3><span class="strong">What we found: </span> </h3>
   
   <ul class="list list-bullet">
-      <li>Testing August 2016</a></li>
+      <li>Testing August 2016</li>
   </ul>
 
   
