--- a/app/views/lis/7/end/tabs/view-entitlement-accordian.html
+++ b/app/views/lis/7/end/tabs/view-entitlement-accordian.html
@@ -131,7 +131,7 @@
   </div>
 
   <div class="column-two-thirds">
-         <p class=""><img class="" style="margin-right:10px" src="/public/images/icon_email.png" alt="">Your  certificate has been emailed to <span style="font-weight:700" id="emailAddress">vinay.mattu@inter.net</span></p>
+         <p class="email-text">Your  certificate has been emailed to <span style="font-weight:700" id="emailAddress">vinay.mattu@inter.net</span></p>
     <article>
       <div class="govspeak">
         <section class="attachment embedded" id="attachment_hc3">
@@ -139,14 +139,11 @@
           </div>
 
           <div class="attachment-details">
-
-
-                      <p class="links"><span class="download"><a href="../../exemption/email-me?helplevel=3">
-                <strong>Email (another) copy</strong></a></span></p>
+            <p class="links"><span class="download"><a href="../../exemption/email-me?helplevel=3">
+            <strong>Email (another) copy</strong></a></span></p>
 
             <p class="links"><span class="download">
-          <a href="javascript:window.print();"> <strong>Print</strong></a>
-          </span></p>
+            <a href="javascript:window.print();"> <strong>Print</strong></a></span></p>
 
             <p class="links"> <span class="download"><a href="/public/images/hc3.pdf">
             <strong>Download PDF</strong>
@@ -154,8 +151,6 @@
 
             <p class="links"> <span class="download"><a href="/public/images/hc3.pdf">
             <strong>Request a paper copy</strong></a></span></p>
-
-
           </div>
 
         </section>
