--- a/public/stylesheets/accordian.css
+++ b/public/stylesheets/accordian.css
@@ -300,3 +300,9 @@ main {
   width: 20%;
   float: right;
   margin: -8px 0 0 0; }
+
+.email-text {
+  padding-left: 2em;
+  background-image: url(/public/images/icon_email.png);
+  background-repeat: no-repeat;
+  background-position: 0px; }
