added changes to content around 'homelessness' and 'son or daughter'

--- a/app/views/sprint7.html
+++ b/app/views/sprint7.html
@@ -60,6 +60,13 @@
         <li><a href="/lis/7/end/steps/what-you-told-us">HC3 Entitlement management page- steps</a></li>
     </ul>
 
+      <ul class="list list-bullet">
+    <li>We're improving wording relating to emotive areas to be more inclusive.</li>
+
+    <li><a href="/lis/7/live/others/relationship-v2">Relationship to you- 'My son or daughter' changed to the gender neutral 'My child'</a></li>
+        <li><a href="/lis/7/live/home-v2">'I am homeless' changed to 'No fixed or permanent address'</a></li>
+    </ul>
+
   <br>
   
   <h3><span class="strong">What we've changed: </span> </h3>
