added left nav option

--- a/app/views/lis/7/end/tabs/view-entitlement-accordian.html
+++ b/app/views/lis/7/end/tabs/view-entitlement-accordian.html
@@ -252,22 +252,22 @@
           <tr class='clickable-row' data-href='you/registration'>
             <td>About you</td>
             <td><span id="about_you_status" class="complete-text">Completed</span>
-            <a href="you/registration">View answers</a></td>
+            <a href="/lis/7/you/about-you-summary">View answers</a></td>
           </tr>
           <tr class='clickable-row' data-href='partner/partner'>
             <td>Partner status</td>
             <td><span id="about_you_status" class="complete-text">Completed</span>
-            <a href="you/registration">View answers</a></td>
+            <a href="/lis/7/partner/summary">View answers</a></td>
           </tr>
           <tr class='clickable-row' data-href='assets/property'>
             <td>Property, savings &amp; money</td>
             <td><span id="about_you_status" class="complete-text">Completed</span>
-            <a href="you/registration">View answers</a></td>
+            <a href="/lis/7/assets/assets-summary">View answers</a></td>
           </tr>
           <tr class='clickable-row' data-href='live/hospital'>
             <td>About where you live</td>
-            <td><span id="about_you_status" class="complete-text">Completed</span>
-            <a href="you/registration">View answers</a></td>
+            <td class="pagination-under-table"><span id="about_you_status" class="complete-text">Completed</span>
+            <a href="/lis/7/live/living-summary">View answers</a></td>
           </tr>
         </table>
 
