--- a/app/views/sprint7.html
+++ b/app/views/sprint7.html
@@ -57,6 +57,7 @@
     <li>We're improving the exemption journey and planning to break it up so that each part delivers a specific user need. Rather than trying to meet all of the needs on one screen (we think this is confusing). Each page should have a clear purpose like 'get a copy of my exemption'.</li>
 
     <li><a href="/lis/7/end/tabs/view-entitlement-accordian">HC3 Entitlement management page- tabs</a></li>
+       <li><a href="/lis/7/end/tabs/view-entitlement-accordian">HC3 Entitlement management page- tabbed with numbers</a></li>
         <li><a href="/lis/7/end/steps/what-you-told-us">HC3 Entitlement management page- steps</a></li>
     </ul>
 
