updated the service title

--- a/app/views/includes/service-headers/low-income.html
+++ b/app/views/includes/service-headers/low-income.html
@@ -1,5 +1,5 @@
 <div class="service-header">
 	<div class="service-name">
-		Low income scheme
+		Apply for help with health costs - the Low Income Scheme
 	</div>
 </div>
