--- a/app/views/lis/6/start.html
+++ b/app/views/lis/6/start.html
@@ -10,7 +10,10 @@
 
       <div class="text">
         
-        <h1 class="heading-xlarge">Low Income Scheme</h1>
+        <div class="heading-group">
+          <h1 class="heading-xlarge">Apply for help with health costs</h1>
+          <h2 class="heading-large">The Low Income Scheme</h2>
+        </div>
         
         <p class="intro-to-list">
           If you find it difficult to pay for health costs you may be entitled to some help towards the cost of:
@@ -34,7 +37,7 @@
         </ul>
         
 
-        <h3 class="heading-medium">You are already entitled to full help with health costs if you are:</h3>
+        <h3 class="heading-medium">You may already be entitled to help with health costs if you are:</h3>
             
         <ul class="list list-bullet">
           <li>getting income support</li>
@@ -43,7 +46,11 @@
           <li>named on, or entitled to, an NHS Tax Credit Exemption certificate</li>
         </ul>
         
-        <p class="intro-to-list">You can claim for:</p>
+        <p>
+          <a href="#" id="next">What to do if the above applies to you</a>
+        </p>
+
+        <h3 class="heading-medium">You can claim for:</h3>
               
         <ul class="list list-bullet">
           <li>yourself;</li>
