--- a/app/views/lis/7/start.html
+++ b/app/views/lis/7/start.html
@@ -41,7 +41,7 @@
         <a href="signin-continue">I've used this service before - view my application</a>
         <hr>
         
-        <h3 class="heading-medium">You are already entitled to full help with health costs if you are getting:</h3>
+        <h3 class="heading-medium">You may already be entitled to help with health costs if you receive any of the following:</h3>
             
         <ul class="list list-bullet">
           <li>income support;</li>
@@ -51,7 +51,7 @@
         </ul>
         
         <p>
-          <a href="" id="next">What to do if I'm entitled because of benefits</a>
+          <a href="" id="next">What to do if one of the above applies to you</a>
         </p>
         
         <h2 class="heading-medium">You can claim for:</h2>
