--- a/app/views/lis/personas/miriam-persona.html
+++ b/app/views/lis/personas/miriam-persona.html
@@ -26,13 +26,13 @@ can manage. I rely on my small amount of savings for unexpected costs which late
       </p>
 
       <p>
-        I am about to have some serious dental treatment and a friend recommended the schemeto me.
+        I am about to have some serious dental treatment and a friend recommended the scheme to me.
       </p>
 
     </div>
     
     <div class="column-third">
-      <p><img src="/public/images/persona-images/miriam.jpg"></</p>
+      <p><img src="/public/images/persona-images/miriam.jpg"></p>
     </div>
     
   </div>
