--- a/app/views/includes/service-headers/low-income-new.html
+++ b/app/views/includes/service-headers/low-income-new.html
@@ -1,5 +1,5 @@
 <div class="service-header">
 	<div class="service-name">
-		Help with health costs - low income scheme
+		Apply for help with health costs - the Low Income Scheme
 	</div>
 </div>
