now shows aplicant full name

--- a/app/views/lis/7/you/about-you-summary.html
+++ b/app/views/lis/7/you/about-you-summary.html
@@ -20,6 +20,12 @@
 <p><strong>Personal details</strong></p>
     <table class="data-table you-summary">
       <tr>
+      <tr>
+        <td>Full name</td>
+        <td>{{applicantFullName}}</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      </td>
         <td>Date of birth</td>
         <td>11 July 1949</td>
         <td><a href="hospital">Change this</a></td>
