--- a/app/views/lis/7/you/registration.html
+++ b/app/views/lis/7/you/registration.html
@@ -34,13 +34,28 @@
       })
     }}
 
-    {{
-      form_macros.date_field({
-        label: 'Date of birth',
-        hint_date: '31 7 1961',
-        id_prefix: 'dob-'
-      })
-    }}
+    <div class="form-item-wrapper">
+        <fieldset>
+          <legend class="form-label-bold">
+            Date of birth
+          </legend>
+          <p class="form-hint">For example 31 7 1961</p>
+          <div class="inline-form-groups">
+            <div class="form-group">
+              <label class="form-label" for="day">Day</label>
+              <input class="form-control form-control-2-chars" id="day" value="day" name="day"  type="number" min="0" max="31">
+            </div>
+            <div class="form-group">
+              <label class="form-label" for="month">Month</label>
+              <input class="form-control form-control-2-chars" id="month" value="month" name="month"  type="number" min="0" max="12">
+            </div>
+            <div class="form-group">
+              <label class="form-label" for="year">Year</label>
+              <input class="form-control form-control-4-chars" id="year" value="year" name="year" type="number" min="0">
+            </div>
+          </div>
+        </fieldset>
+      </div>
 
     {{
       form_macros.button({
