added the date of birth variables and converted the month to a string

--- a/app/views/lis/7/you/about-you-summary.html
+++ b/app/views/lis/7/you/about-you-summary.html
@@ -26,14 +26,14 @@
       </tr>
       <tr>
         <td>Date of birth</td>
-        <td>{{dobyear}}</td>
+        <td>{{dobday}} {{dobmonth}} {{dobyear}}</td>
         <td><a href="">Change this</a></td>
       </tr>
-      <tr>
+      <!--tr>
         <td>National insurance number</td>
         <td>JD 12 34 56 D</td>
         <td><a href="work">Change this</a></td>
-      </tr>
+      </tr-->
       <tr>
         <td>How would you like us to contact you?</td>
         <td>Email</td>
@@ -41,7 +41,7 @@
       </tr>
       <tr>
         <td>Email address</td>
-        <td>test@inter.net</td>
+        <td>{{email}}</td>
         <td><a href="pension/pension">Change this</a></td>
       </tr>
       <tr>
