--- a/app/views/templates/nhs_template.html
+++ b/app/views/templates/nhs_template.html
@@ -17,8 +17,6 @@
   <body class="{% block bodyClasses %}{% endblock %}">
     <script type="text/javascript">document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
 
-
-
     <div id="skiplink-container">
       <div>
         <a href="#content" class="skiplink">Skip to main content</a>
@@ -40,6 +38,8 @@
 
 
     {% block afterHeader %}{% endblock %}
+    
+    <!-- {% include "includes/alpha-banner.html" %} -->
 
     {% block content %}{% endblock %}
 
