--- a/app/views/lis/7/save-continue/ref.html
+++ b/app/views/lis/7/save-continue/ref.html
@@ -22,7 +22,7 @@
         <h1 class="heading-xlarge">1Q3 4T6 7K9</h1> 
       </div>
       
-      <form action="email-address-handler" method="get" class="form">
+      <form action="ref-email-handler" method="get" class="form">
 
         <details>
 
@@ -37,7 +37,7 @@
                   <label class="form-label-bold" for="email">
                     Email address (optional)
                   </label>
-                  <input type="text" id="email"  name="email" class="form-control">
+                  <input type="text" id="email" name="email" class="form-control">
                 </div>
               </fieldset>
             </div>
