--- a/app/views/lis/7/you/about-you-summary.html
+++ b/app/views/lis/7/you/about-you-summary.html
@@ -17,7 +17,7 @@
     <h1 class="heading-large">
       Check your details
     </h1>
-<p><strong>Personal details</strong></p>
+    <p><strong>Personal details</strong></p>
     <table class="data-table you-summary">
       <tr>
         <td>Full name</td>
@@ -36,11 +36,11 @@
       </tr-->
       <tr>
         <td>How would you like us to contact you?</td>
-        <td>Email</td>
+        <td>{{contact}}</td>
         <td><a href="education">Change this</a></td>
       </tr>
       <tr>
-        <td>Email address</td>
+        <td>{{contacttext}}</td>
         <td>{{email}}</td>
         <td><a href="pension/pension">Change this</a></td>
       </tr>
