added a var to capture savings credit value and a function to convert this to a yes no value

--- a/app/views/lis/7/you/about-you-summary.html
+++ b/app/views/lis/7/you/about-you-summary.html
@@ -51,7 +51,7 @@
           <table class="data-table you-summary">
               <tr>
         <td>
-          You you have a job?
+          Do you have a job?
         </td>
         <td>
         No
@@ -83,7 +83,7 @@
       </tr>
          <tr>
         <td>Do you receive Pension Credit Savings Credit?</td>
-        <td>Yes</td>
+        <td>{{savingscredit}}</td>
         <td><a href="pension/private-pension-amount">Change this</a></td>
       </tr>
       <tr>
