--- a/app/views/lis/7/you/pension/pension-credit.html
+++ b/app/views/lis/7/you/pension/pension-credit.html
@@ -21,14 +21,14 @@
     <div class="form-item-wrapper">     
       <div class="inline-form-groups">
         <div class="form-group">
-        <input type="radio" id="ssp" name="prencred" value="ssp">
-        <label class="form-control-radio" for="ssp">
+        <input type="radio" id="yes" name="savingscredit" value="yes">
+        <label class="form-control-radio" for="yes">
           Yes
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="none" name="prencred" value="none">
-        <label class="form-control-radio" for="none">
+        <input type="radio" id="no" name="savingscredit" value="no">
+        <label class="form-control-radio" for="no">
           No
         </label>
       </div>
