--- a/app/views/lis/7/to_do_list/index.html
+++ b/app/views/lis/7/to_do_list/index.html
@@ -1,11 +1,10 @@
-{% extends "layout.html" %}
-{% block page_title %} Example - Forms {% endblock %}
+{% extends 'templates/nhs_transaction_layout.html' %}
 
 {% block extra_css %}<link rel="stylesheet" href="/public/stylesheets/dm_list.css" />{% endblock %}
-
 {% block content %}
+
+
 <main id="content" role="main">
-  {% include "includes/phase_banner_beta.html" %}
 
    <div id="">
 
