--- a/app/views/lis/7/save-continue/code.html
+++ b/app/views/lis/7/save-continue/code.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Enter the access code we sent to 07*** *** 775
+    Enter the access code we sent to {{telephone}}
   </h1>
       <form action="" method="get" class="form">
         <div class="form-item-wrapper">
