now shows the users contact preference and the value

--- a/app/views/lis/7/you/about-you-summary.html
+++ b/app/views/lis/7/you/about-you-summary.html
@@ -41,7 +41,7 @@
       </tr>
       <tr>
         <td>{{contacttext}}</td>
-        <td>{{email}}</td>
+        <td>{{contactValue}}</td>
         <td><a href="pension/pension">Change this</a></td>
       </tr>
       <tr>
