--- a/app/views/lis/7/you/telephone.html
+++ b/app/views/lis/7/you/telephone.html
@@ -12,7 +12,7 @@
   <div class="grid-row">
     <div class="column-two-thirds">
   <h1 class="heading-large">
-    Would you like to use <br> 07*** *** 775?
+    Would you like to use <br> {{telephone}}?
   </h1>
 
   <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
